Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16403

Crashes in shell32_winetest:shlfolder

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • None
    • Shell
    • None

    Description

      The test shows various bugs in our shell folder implementations.

      E.g. https://reactos.org/testman/detail.php?id=44111459&prev=0

      The first test that crashes is a call to CDrivesFolder::BindToObject with a NULL pidl.
      This call is made here: https://git.reactos.org/?p=reactos.git;a=blob;f=modules/rostests/winetests/shell32/shlfolder.c;hb=be1f95527ac288872c45a8b076399590c7db494a#l465

      Attachments

        Activity

          People

            bug zilla Bug Zilla
            ThFabba ThFabba
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: