[SHELLFOLDERS] Gracefully handle NULL pidl in CDrivesFolder::BindToObject. CORE-16403

Fixes one of many crashes in shell32_winetest:shlfolder.